# RedToken

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/application/: config.rs  service.rs
src/core/: error.rs  injection.rs  mod.rs  notification.rs  token.rs
src/infrastructure/: injection.rs  mod.rs  notification.rs  repository.rs
src/interfaces/: cli.rs  web.rs
